reimplementation of JQ